--- a/Project1.css
+++ b/Project1.css
@@ -1,13 +1,14 @@
 body{
-	background-color: lightskyblue;
+	background-color: #89A1EF;
 }
 
-a{
-	background-color: coral;
-}
 
 a:hover{
-	background-color: lightcoral;
+	color: #2383E8;
+}
+
+a:visited{
+	color: green;
 }
 
 h1{
@@ -16,6 +17,9 @@ h1{
 }
 
 p{
+	display: grid;
+	text-align: left;
+	padding: 10px;
 	font-size: 20px;
 }
 
@@ -28,40 +32,41 @@ p{
 
 .Grid {
 	display: grid;
-	grid-template-columns: 1fr 1fr 1fr ;
-	grid-auto-rows:  2fr 1fr 1fr;
+	min-height: 100vh;
+	grid-template-columns:0.5fr 1fr 2fr;
+	grid-auto-rows: 0.5fr 1fr 2fr;
 	grid-gap: 20px;
 }
 
 .grid-Header{
 	grid-row: 1;
-	grid-column: 1 / 12;
-	border: 4px solid black;
-	background-color: blueviolet;
+	grid-column: 1/ 14;
+	border: 2.5px solid black;
+	background-color: #32CBFF;
 	grid-column: 2fr;
 	padding: 10px;
 }
 
 .grid-Body{
 	grid-row: 2 / 5;
-	grid-column:  2 / 5;
-	background-color: blueviolet;
-	border: 4px solid black;
+	grid-column:  2 / 14;
+	background-color: #32CBFF;
+	border: 2.5px solid black;
 	padding: 10px;
 }
 
 .grid-Aside{
 	grid-row: 2 / 5;
 	grid-column: 1 / 2;
-	background-color: blueviolet;
-	border: 4px solid black;
+	background-color: #32CBFF;
+	border: 2.5px solid black;
 	padding: 10px;
 }
 
 .grid-Footer{
 	grid-row:  5;
-	grid-column:  1 / 12;
-	background-color: blueviolet;
-	border: 4px solid black;
+	grid-column:  1 / 14;
+	background-color: #32CBFF;
+	border: 2.5px solid black;
 	padding: 10px;
 }
